--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
+    "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0"
