--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-audio-player": "^0.13.0",
     "react-bootstrap": "^1.2.2",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
